Votre message de commit

--- a/about/about-1.html
+++ b/about/about-1.html
@@ -316,24 +316,6 @@
 		</div>
 		</div>
 	</section>
-	<section>
-		<div class="w-layout-blockcontainer container w-container">
-			<div class="home-button-component">
-				<div class="cta-heading">
-					<p class="text-size-xhuge">"You can’t use up creativity. The more you use, the more you have."</p>
-				</div>
-				<div id="w-node-deb38998-6ece-4b52-c6cc-a0ab30eab5da-30eab5d4"
-					data-w-id="deb38998-6ece-4b52-c6cc-a0ab30eab5da" class="circle-container"><a
-						href="../contact/contact-1.html" id="w-node-deb38998-6ece-4b52-c6cc-a0ab30eab5db-30eab5d4"
-						class="button-circle-wrap w-inline-block">
-						<div class="elipse-button">
-							<div class="text-size-small">Let’s work together</div>
-						</div>
-						<div class="elipse-fill"></div>
-					</a></div>
-			</div>
-		</div>
-	</section>
 	<section data-w-id="5f2c97f0-0acf-20e5-b818-1d621d2643d7" class="footer">
 		<div class="margin-footer">
 			<div class="footer-text">Oranginal®</div>
@@ -362,15 +344,15 @@
 					</div>
 					<div class="footer-right">
 						<div id="w-node-_5f2c97f0-0acf-20e5-b818-1d621d2643e7-1d2643d7" class="footer-address">
-							<div class="text-size-medium">Phone</div>
+							<div class="text-size-medium">Based in</div>
 							<div class="opacity-80">
-								<p class="text-size-medium text-weight-light">+33 6 95 51 88 60</p>
+								<p class="text-size-medium text-weight-light">Paris, France</p>
 							</div>
 						</div>
 						<div class="footer-address">
-							<div class="text-size-medium">Based in</div>
+							<div class="text-size-medium"></div>
 							<div class="opacity-80">
-								<p class="text-size-medium text-weight-light">Paris,<br /> France </p>
+								<p class="text-size-medium text-weight-light"><br /> </p>
 							</div>
 						</div>
 					</div>
