--- a/index.html
+++ b/index.html
@@ -149,31 +149,37 @@
 				<div class="w-layout-blockcontainer container w-container">
 					<div class="home-3-hero">
 						<div class="hero-marquee-wrap">
-							<div style="-webkit-transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
+							<div style="-webkit-transform:translate3d(-100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
 								class="hero-home-marquee">
 								<h1 class="about-1-heading">Oranginal · World · </h1>
 							</div>
-							<div style="-webkit-transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
+							<div style="-webkit-transform:translate3d(-100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
 								class="hero-home-marquee">
 								<h1 class="about-1-heading">Oranginal · World · </h1>
 							</div>
-							<div style="-webkit-transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
+							<div style="-webkit-transform:translate3d(-100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(100vw, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
 								class="hero-home-marquee">
 								<h1 class="about-1-heading">Oranginal · World · </h1>
 							</div>
+
+
 						</div>
 						<div class="home-hero-content">
+
 							<div id="w-node-_51fb8fcb-df27-c8b1-4ed9-cdd4946bbfea-49dd2b75" class="home-hero-left">
+
 								<div class="home-hero-left-title">
 									<div class="white-elipse"></div>
-									<div class="caps text-weight-medium">Freelance digital artist & creative director
+									<div class="caps text-weight-medium">Freelance digital artist </br> & creative
+										director
 									</div>
 								</div>
 								<div class="home-hero-paragrah">
-									<div class="caps text-size-small letter-spacing">3D AND CREATIVE COMPUTING
+									<div class="caps text-size-small letter-spacing"> 3D AND CREATIVE COMPUTING
 										SPECIALIST</div>
 								</div>
 							</div>
+
 							<div id="w-node-_51fb8fcb-df27-c8b1-4ed9-cdd4946bbff2-49dd2b75" class="home-hero-button"><a
 									href="/contact/contact-1" class="button overflow-hidden w-inline-block">
 									<div class="text-size-regular">oranginal.studio@gmail.com</div>
@@ -246,7 +252,7 @@
 																stroke-linecap="round" stroke-linejoin="round" />
 														</svg></div>
 												</div>
-											</a></div><a href="/works/music-pro"
+											</a></div><a href="/works/khaos.html"
 											class="work-image-wrapper w-inline-block"><img loading="lazy" alt=""
 												src="../images1/olympe1.jpg" class="image" /></a>
 									</div>
@@ -269,7 +275,7 @@
 																stroke-linecap="round" stroke-linejoin="round" />
 														</svg></div>
 												</div>
-											</a></div><a href="/works/louis-vuitton"
+											</a></div><a href="/works/khaos.html"
 											class="work-image-wrapper w-inline-block"><img loading="lazy" alt=""
 												src="../images1/iavatarorgin1.jpg" class="image" /></a>
 									</div>
@@ -292,7 +298,7 @@
 																stroke-linecap="round" stroke-linejoin="round" />
 														</svg></div>
 												</div>
-											</a></div><a href="/works/cyber-tesla"
+											</a></div><a href="/works/khaos.html"
 											class="work-image-wrapper w-inline-block"><img loading="lazy" alt=""
 												src="../images1/mushroomhomeH3.jpg" class="image" /></a>
 									</div>
@@ -332,15 +338,15 @@
 					</div>
 					<div class="footer-right">
 						<div id="w-node-_5f2c97f0-0acf-20e5-b818-1d621d2643e7-1d2643d7" class="footer-address">
-							<div class="text-size-medium">Phone</div>
+							<div class="text-size-medium">Based in</div>
 							<div class="opacity-80">
-								<p class="text-size-medium text-weight-light">+33 6 95 51 88 60</p>
+								<p class="text-size-medium text-weight-light">Paris, France</p>
 							</div>
 						</div>
 						<div class="footer-address">
-							<div class="text-size-medium">Based in</div>
+							<div class="text-size-medium"></div>
 							<div class="opacity-80">
-								<p class="text-size-medium text-weight-light">Paris,<br /> France </p>
+								<p class="text-size-medium text-weight-light"><br /> </p>
 							</div>
 						</div>
 					</div>
