--- a/others/orangiverse.html
+++ b/others/orangiverse.html
@@ -143,7 +143,7 @@
   </section>
   <section data-w-id="5f2c97f0-0acf-20e5-b818-1d621d2643d7" class="footer">
     <div class="margin-footer">
-      <div class="footer-text">oranginal®</div>
+      <div class="footer-text">Oranginal®</div>
     </div>
     <div class="w-layout-blockcontainer container w-container">
       <div class="footer-component">
@@ -152,9 +152,11 @@
             <div class="branding-image"><img src="../images/c2-a5.svg" loading="lazy" alt="Icon SVG" />
             </div>
             <div class="footer-paragraph">
-              <p class="text-size-huge footer">If you wanna stand out, gotta be outstanding. Our designers
-                and development rockstars are here to make your digital dreams pop.</p>
-            </div><a href="/contact/contact-1" class="button overflow-hidden w-inline-block">
+              <p class="text-size-huge footer"> Cutting-edge technology in art and design is key to
+                creating strong, interactive communication. Your brand deserves the best, and I’m here
+                to deliver modern and high-quality results.
+              </p>
+            </div><a href="/contact/contact-1.html" class="button overflow-hidden w-inline-block">
               <div class="link-footer">
                 <div class="opacity-80">
                   <div class="text-size-medium caps">start your project</div>
@@ -167,17 +169,15 @@
           </div>
           <div class="footer-right">
             <div id="w-node-_5f2c97f0-0acf-20e5-b818-1d621d2643e7-1d2643d7" class="footer-address">
-              <div class="text-size-medium">Raleigh</div>
+              <div class="text-size-medium">Based in</div>
               <div class="opacity-80">
-                <p class="text-size-medium text-weight-light">1600 Amphitheatre Pkwy<br />Raleigh, CA
-                  94043<br />919.083.6478</p>
+                <p class="text-size-medium text-weight-light">Paris, France</p>
               </div>
             </div>
             <div class="footer-address">
-              <div class="text-size-medium">California</div>
+              <div class="text-size-medium"></div>
               <div class="opacity-80">
-                <p class="text-size-medium text-weight-light">125 N. Harrington Street<br />San
-                  Francisco, CA<br />94103</p>
+                <p class="text-size-medium text-weight-light"><br /> </p>
               </div>
             </div>
           </div>
@@ -185,12 +185,12 @@
         <div class="footer-bottom">
           <div class="credits-wrapper"><a href="https://webflow.com/templates/designers/lucas-gusso" target="_blank"
               class="credits w-inline-block">
-              <p class="text-color-grey text-size-medium">Design &amp; Developed by <span class="text-color-white">Lucas
-                  Gusso</span></p>
+              <p class="text-color-grey text-size-medium"> © Valentin Dumas 2024 All Rights
+                Reserved <span class="text-color-white"> </span></p>
             </a><a href="https://webflow.com/" target="_blank" class="credits w-inline-block">
-              <p class="text-color-grey text-size-medium">Powered by <span class="text-color-white">Webflow</span></p>
+
             </a></div>
-          <div class="footer-social-wrap"><a href="https://www.instagram.com/lucas.webflow/" target="_blank"
+          <div class="footer-social-wrap"><a href="https://www.instagram.com/oranginal_/" target="_blank"
               class="footer-social-link w-inline-block">
               <div class="caps">Instagram</div>
               <div class="footer-arrow-wrapper">
@@ -198,16 +198,16 @@
                 </div>
                 <div class="footer-arrow absolute"><img src="../images/arrow.svg" loading="lazy" alt="Arrow" /></div>
               </div>
-            </a><a href="https://webflow.com/templates/designers/lucas-gusso" target="_blank"
-              class="footer-social-link w-inline-block">
-              <div class="caps">Dribbble</div>
+            </a><a href="https://www.behance.net" target="_blank" class="footer-social-link w-inline-block">
+              <div class="caps">Behance</div>
               <div class="footer-arrow-wrapper">
                 <div class="footer-arrow"><img src="../images/arrow.svg" loading="lazy" alt="Arrow" />
                 </div>
                 <div class="footer-arrow absolute"><img src="../images/arrow.svg" loading="lazy" alt="Arrow" /></div>
               </div>
-            </a><a href="/template/license" class="footer-social-link w-inline-block">
-              <div class="caps">License</div>
+            </a><a href="https://www.linkedin.com/in/valentin-dumas-96891a203/" target="_blank"
+              class="footer-social-link w-inline-block">
+              <div class="caps">Linkedin</div>
               <div class="footer-arrow-wrapper">
                 <div class="footer-arrow"><img src="../images/arrow.svg" loading="lazy" alt="Arrow" />
                 </div>
