--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div data-delay="100" data-hover="true" class="dropdown-navbar w-dropdown">
 						<div class="dropdown w-dropdown-toggle">
 							<!-- Ajout du lien <a> pour ouvrir directement la page work-1.html -->
-							<a href="work/work-1.html" style="text-decoration: none; color: inherit;">
+							<a href="others/orangiverse.html" style="text-decoration: none; color: inherit;">
 								<div class="text-size-regular text-color-black">Work</div>
 							</a>
 						</div>
@@ -197,7 +197,7 @@
 				<div class="heading-images">
 					<div class="text-wrapper">
 						<div class="intro-text">Enhance your digital <div href="#" class="span one"> </div> presence
-							with excellence and creativity <div href="#" class="span two">
+							</br> with excellence and creativity <div href="#" class="span two">
 							</div> I bring your vision to life through
 							artistic direction, innovative <div href="#" class="span three"> </div> content creation and
 							creative technology</div>
@@ -252,7 +252,7 @@
 																stroke-linecap="round" stroke-linejoin="round" />
 														</svg></div>
 												</div>
-											</a></div><a href="/works/khaos.html"
+											</a></div><a href="/works/olympe.html"
 											class="work-image-wrapper w-inline-block"><img loading="lazy" alt=""
 												src="../images1/olympe1.jpg" class="image" /></a>
 									</div>
