--- a/others/orangiverse.html
+++ b/others/orangiverse.html
@@ -136,7 +136,7 @@
               class="font-satoshi text-weight-medium">Construction</span> Please wait</h1>
         </div>
         <div data-w-id="3bfa2668-f45c-8577-a9ad-01a7b6156122" style="opacity:0" class="pricing-subtitle opacity-80">
-          <p class="text-size-regular">A brand new universe is waiting</p>
+          <p class="text-size-regular">A brand new universe is unfolding</p>
         </div>
       </div>
     </div>
