--- a/about/about-1.html
+++ b/about/about-1.html
@@ -3,19 +3,13 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Oranginal - The digital content you deserve</title>
-	<meta
-		content="Take your portfolio to new heights with Mars — a stunning Webflow Template designed to showcase your work with customizable layouts and seamless animations. Perfect for creatives of all levels, impress your clients with a polished and professional presentation of your design projects."
-		name="description" />
-	<meta content="Mars - Webflow Ecommerce website template" property="og:title" />
-	<meta
-		content="Take your portfolio to new heights with Mars — a stunning Webflow Template designed to showcase your work with customizable layouts and seamless animations. Perfect for creatives of all levels, impress your clients with a polished and professional presentation of your design projects."
-		property="og:description" />
+	<title>Oranginal - Digital Creation</title>
+	<meta content="descrition a faire" name="description" />
+	<meta content="Oranginal - Digital content and more" property="og:title" />
+	<meta content="descrition a faire" property="og:description" />
 	<meta content="../images/open-20graph.jpg" property="og:image" />
-	<meta content="Mars - Webflow Ecommerce website template" property="twitter:title" />
-	<meta
-		content="Take your portfolio to new heights with Mars — a stunning Webflow Template designed to showcase your work with customizable layouts and seamless animations. Perfect for creatives of all levels, impress your clients with a polished and professional presentation of your design projects."
-		property="twitter:description" />
+	<meta content="Oranginal - Digital content and more" property="twitter:title" />
+	<meta content="descrition a faire" property="twitter:description" />
 	<meta content="../images/open-20graph.jpg" property="twitter:image" />
 	<meta property="og:type" content="website" />
 	<meta content="summary_large_image" name="twitter:card" />
@@ -64,7 +58,7 @@
 					<div data-delay="100" data-hover="true" class="dropdown-navbar w-dropdown">
 						<div class="dropdown w-dropdown-toggle">
 
-							<a href="/work/work-1.html" style="text-decoration: none; color: inherit;">
+							<a href="../other/orangiverse.html" style="text-decoration: none; color: inherit;">
 								<div class="text-size-regular">Works</div>
 							</a>
 						</div>
@@ -110,7 +104,7 @@
 						</div>
 						<div data-delay="100" data-hover="true" class="dropdown-navbar responsive w-dropdown">
 							<div class="dropdown w-dropdown-toggle">
-								<a href="/work/work-1.html" style="text-decoration: none; color: inherit;">
+								<a href="../others/orangiverse.html" style="text-decoration: none; color: inherit;">
 									<div class="text-size-regular">Works</div>
 								</a>
 								<div class="dropdown-icon w-icon-dropdown-toggle"></div>
@@ -157,9 +151,10 @@
 				<div class="w-layout-blockcontainer container medium w-container">
 					<div class="w-layout-grid about-hero-grid">
 						<div id="w-node-_1d40c2ec-c880-5528-fa7e-0358f94cb306-49dd2b9a" class="hero-subtitle">
-							<p class="caps text-weight-medium text-size-small">With a broad spectrum of design needs in
-								mind, our design collection encompasses everything from elegant and timeless styles to
-								modern and daring designs.</p>
+							<p class="caps text-weight-medium text-size-small"> With a broad spectrum of digital growth
+								in focus, content creation evolves at the intersection of engineering and art, blending
+								technical innovation with creative expression to engage and inspire across all
+								platforms.</p>
 						</div>
 						<div id="w-node-_1d40c2ec-c880-5528-fa7e-0358f94cb309-49dd2b9a" class="mobile-display-none">
 							<div class="hero-year"></div>
@@ -204,10 +199,10 @@
 						</div>
 						<div id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe3ef-49dd2b9a" class="row-text">
 							<p id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe3f0-49dd2b9a" class="text-size-regular">
-								Strategic prowess defines every triumphant brand odyssey. We navigate market
-								intricacies, consumer perceptions, and your brand&#x27;s essence to outline a roadmap
-								that bridges vision and implementation. Our strategic acumen guarantees your
-								brand&#x27;s journey culminates in a resounding and lasting impact.</p>
+								Art direction shapes every brand's visual narrative, guiding the creative process from
+								concept to execution. By aligning aesthetics with brand identity, we craft compelling
+								visuals that resonate with your audience. Our expertise ensures your brand's story is
+								told with clarity, consistency, and emotional impact, leaving a lasting impression.</p>
 						</div>
 					</div>
 					<div class="row-line"></div>
@@ -224,10 +219,11 @@
 						</div>
 						<div id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe3fb-49dd2b9a" class="row-text">
 							<p id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe3fc-49dd2b9a" class="text-size-regular">
-								Branding epitomizes crafting an identity that etches itself into memory. We mold
-								captivating brand personalities by blending values, narratives, and design, crafting
-								resonant experiences. We shape brands that articulate narratives, cultivating enduring
-								connections that withstand the ages</p>
+								Digital content creation breathes life into your brand's message, transforming ideas
+								into engaging multimedia experiences. We craft content that captivates, educates, and
+								inspires, tailored to resonate across platforms. Our expertise ensures your digital
+								presence is dynamic, impactful, and aligned with your brand’s goals, creating lasting
+								connections with your audience.</p>
 						</div>
 					</div>
 					<div class="row-line"></div>
@@ -243,10 +239,11 @@
 						</div>
 						<div id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe407-49dd2b9a" class="row-text">
 							<p id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe408-49dd2b9a" class="text-size-regular">
-								Communication forms the pulsating core of brand connections. We sculpt narratives that
-								enthrall, strategies that reverberate, and messages that ignite bonds. Embracing
-								compelling storytelling and precise messaging, we amplify your brand&#x27;s authentic
-								voice, fostering enduring connections with your audience.</p>
+								Creative technology merges innovation with imagination, turning concepts into
+								interactive experiences that captivate and engage. We harness the latest tech to push
+								creative boundaries, crafting solutions that are as functional as they are inspiring.
+								Our expertise ensures your brand leverages cutting-edge tools to create immersive,
+								impactful experiences that resonate with your audience.</p>
 						</div>
 					</div>
 					<div class="row-line"></div>
@@ -258,14 +255,15 @@
 						</div>
 						<div id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe410-49dd2b9a" class="max-width-44ch">
 							<h3 id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe411-49dd2b9a" class="services-text-size">
-								WEb development</h3>
+								WEb Development</h3>
 						</div>
 						<div id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe413-49dd2b9a" class="row-text">
-							<p id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe414-49dd2b9a" class="text-size-regular">In
-								the current digital realm, innovation reigns supreme. Our digital solutions embolden
-								brands with avant-garde strategies, web design, and technology. Seamlessly blending
-								creativity and technology, we craft websites and interactive campaigns that redefine
-								digital experiences, elevating your brand&#x27;s online presence.</p>
+							<p id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe414-49dd2b9a" class="text-size-regular">Web
+								development is the backbone of your digital presence, transforming designs into fully
+								functional, responsive websites. We build robust, user-friendly platforms that
+								seamlessly integrate with your brand's identity and goals. Our expertise ensures your
+								website is not only visually appealing but also optimized for performance, providing a
+								seamless and engaging experience for your audience.</p>
 						</div>
 					</div>
 					<div class="row-line"></div>
@@ -280,11 +278,12 @@
 								Consulting</h3>
 						</div>
 						<div id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe413-49dd2b9a" class="row-text">
-							<p id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe414-49dd2b9a" class="text-size-regular">In
-								the current digital realm, innovation reigns supreme. Our digital solutions embolden
-								brands with avant-garde strategies, web design, and technology. Seamlessly blending
-								creativity and technology, we craft websites and interactive campaigns that redefine
-								digital experiences, elevating your brand&#x27;s online presence.</p>
+							<p id="w-node-_8a26045b-687f-4e78-35f5-5d81daffe414-49dd2b9a" class="text-size-regular">
+								Consulting empowers your brand with expert insights and strategic guidance, helping you
+								navigate challenges and seize opportunities. We collaborate closely to understand your
+								goals and tailor solutions that drive success. Our expertise ensures your brand is
+								equipped with the knowledge and strategies needed to thrive in a competitive landscape,
+								making informed decisions that lead to sustained growth.</p>
 						</div>
 					</div>
 				</div>
@@ -358,11 +357,12 @@
 					</div>
 				</div>
 				<div class="footer-bottom">
-					<div class="credits-wrapper"><a href="https://webflow.com/templates/designers/lucas-gusso"
-							target="_blank" class="credits w-inline-block">
+					<div class="credits-wrapper"><a href="https://www.instagram.com/oranginal_/" target="_blank"
+							class="credits w-inline-block">
 							<p class="text-color-grey text-size-medium"> © Valentin Dumas 2024 All Rights
 								Reserved <span class="text-color-white"> </span></p>
-						</a><a href="https://webflow.com/" target="_blank" class="credits w-inline-block">
+						</a><a href="https://www.instagram.com/oranginal_/" target="_blank"
+							class="credits w-inline-block">
 
 						</a></div>
 					<div class="footer-social-wrap"><a href="https://www.instagram.com/oranginal_/" target="_blank"
