--- a/contact/contact-1.html
+++ b/contact/contact-1.html
@@ -3,19 +3,13 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Oranginal - Digital Solution</title>
-	<meta
-		content="Take your portfolio to new heights with Mars — a stunning Webflow Template designed to showcase your work with customizable layouts and seamless animations. Perfect for creatives of all levels, impress your clients with a polished and professional presentation of your design projects."
-		name="description" />
-	<meta content="Mars - Webflow Ecommerce website template" property="og:title" />
-	<meta
-		content="Take your portfolio to new heights with Mars — a stunning Webflow Template designed to showcase your work with customizable layouts and seamless animations. Perfect for creatives of all levels, impress your clients with a polished and professional presentation of your design projects."
-		property="og:description" />
+	<title>Oranginal - Digital Creation</title>
+	<meta content="descrition a faire" name="description" />
+	<meta content="Oranginal - Digital content and more" property="og:title" />
+	<meta content="descrition a faire" property="og:description" />
 	<meta content="../images/open-20graph.jpg" property="og:image" />
-	<meta content="Mars - Webflow Ecommerce website template" property="twitter:title" />
-	<meta
-		content="Take your portfolio to new heights with Mars — a stunning Webflow Template designed to showcase your work with customizable layouts and seamless animations. Perfect for creatives of all levels, impress your clients with a polished and professional presentation of your design projects."
-		property="twitter:description" />
+	<meta content="Oranginal - Digital content and more" property="twitter:title" />
+	<meta content="descrition a faire" property="twitter:description" />
 	<meta content="../images/open-20graph.jpg" property="twitter:image" />
 	<meta property="og:type" content="website" />
 	<meta content="summary_large_image" name="twitter:card" />
@@ -262,11 +256,12 @@
 					</div>
 				</div>
 				<div class="footer-bottom">
-					<div class="credits-wrapper"><a href="https://webflow.com/templates/designers/lucas-gusso"
-							target="_blank" class="credits w-inline-block">
+					<div class="credits-wrapper"><a href="https://www.instagram.com/oranginal_/" target="_blank"
+							class="credits w-inline-block">
 							<p class="text-color-grey text-size-medium"> © Valentin Dumas 2024 All Rights
 								Reserved <span class="text-color-white"> </span></p>
-						</a><a href="https://webflow.com/" target="_blank" class="credits w-inline-block">
+						</a><a href="https://www.instagram.com/oranginal_/" target="_blank"
+							class="credits w-inline-block">
 
 						</a></div>
 					<div class="footer-social-wrap"><a href="https://www.instagram.com/oranginal_/" target="_blank"
