--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Oranginal - The digital content you deserve"</title>
-	<meta
-		content="Take your portfolio to new heights with Oranginal — a stunning Webflow Template designed to showcase your work with customizable layouts and seamless animations. Perfect for creatives of all levels, impress your clients with a polished and professional presentation of your design projects."
-		name="description" />
-	<meta content="Oranginal - The digital content you deserve" property="og:title" />
-	<meta
-		content="Take your portfolio to new heights with Oranginal — a stunning Webflow Template designed to showcase your work with customizable layouts and seamless animations. Perfect for creatives of all levels, impress your clients with a polished and professional presentation of your design projects."
-		property="og:description" />
+	<title>Oranginal - Digital Creation</title>
+	<meta content="descrition a faire" name="description" />
+	<meta content="Oranginal - Digital content and more" property="og:title" />
+	<meta content="descrition a faire" property="og:description" />
 	<meta content="../images/open-20graph.jpg" property="og:image" />
-	<meta content="Oranginal - The digital content you deserve"" property=" twitter:title" />
-	<meta
-		content="Take your portfolio to new heights with Oranginal — a stunning Webflow Template designed to showcase your work with customizable layouts and seamless animations. Perfect for creatives of all levels, impress your clients with a polished and professional presentation of your design projects."
-		property="twitter:description" />
+	<meta content="Oranginal - Digital content and more" property="twitter:title" />
+	<meta content="descrition a faire" property="twitter:description" />
 	<meta content="../images/open-20graph.jpg" property="twitter:image" />
 	<meta property="og:type" content="website" />
 	<meta content="summary_large_image" name="twitter:card" />
@@ -112,7 +106,7 @@
 					<div data-delay="100" data-hover="true" class="dropdown-navbar responsive w-dropdown">
 						<div class="dropdown w-dropdown-toggle">
 							<!-- Ajout du lien <a> pour ouvrir directement la page work-1.html -->
-							<a href="work/work-1.html" style="text-decoration: none; color: inherit;">
+							<a href="others/orangiverse.html" style="text-decoration: none; color: inherit;">
 								<div class="text-size-regular">Works</div>
 							</a>
 							<div class="dropdown-icon w-icon-dropdown-toggle"></div>
@@ -229,7 +223,7 @@
 																stroke-linecap="round" stroke-linejoin="round" />
 														</svg></div>
 												</div>
-											</a></div><a href="/works/khaos.html"
+											</a></div><a href="others/orangiverse.html"
 											class="work-image-wrapper w-inline-block"><img loading="lazy" alt=""
 												src="../images1/khaosmainpage.jpg" class="image" /></a>
 									</div>
@@ -252,7 +246,7 @@
 																stroke-linecap="round" stroke-linejoin="round" />
 														</svg></div>
 												</div>
-											</a></div><a href="/works/olympe.html"
+											</a></div><a href="others/orangiverse.html"
 											class="work-image-wrapper w-inline-block"><img loading="lazy" alt=""
 												src="../images1/olympe1.jpg" class="image" /></a>
 									</div>
@@ -275,7 +269,7 @@
 																stroke-linecap="round" stroke-linejoin="round" />
 														</svg></div>
 												</div>
-											</a></div><a href="/works/khaos.html"
+											</a></div><a href="others/orangiverse.html"
 											class="work-image-wrapper w-inline-block"><img loading="lazy" alt=""
 												src="../images1/iavatarorgin1.jpg" class="image" /></a>
 									</div>
@@ -298,7 +292,7 @@
 																stroke-linecap="round" stroke-linejoin="round" />
 														</svg></div>
 												</div>
-											</a></div><a href="/works/khaos.html"
+											</a></div><a href="others/orangiverse.html"
 											class="work-image-wrapper w-inline-block"><img loading="lazy" alt=""
 												src="../images1/mushroomhomeH3.jpg" class="image" /></a>
 									</div>
@@ -352,11 +346,12 @@
 					</div>
 				</div>
 				<div class="footer-bottom">
-					<div class="credits-wrapper"><a href="https://webflow.com/templates/designers/lucas-gusso"
-							target="_blank" class="credits w-inline-block">
+					<div class="credits-wrapper"><a href="https://www.instagram.com/oranginal_/" target="_blank"
+							class="credits w-inline-block">
 							<p class="text-color-grey text-size-medium"> © Valentin Dumas 2024 All Rights
 								Reserved <span class="text-color-white"> </span></p>
-						</a><a href="https://webflow.com/" target="_blank" class="credits w-inline-block">
+						</a><a href="https://www.instagram.com/oranginal_/" target="_blank"
+							class="credits w-inline-block">
 
 						</a></div>
 					<div class="footer-social-wrap"><a href="https://www.instagram.com/oranginal_/" target="_blank"
